| Bug #17854 | DBLQH crash on single node after system restart | ||
|---|---|---|---|
| Submitted: | 2 Mar 2006 10:06 | Modified: | 14 Mar 2006 9:29 |
| Reporter: | Johan Andersson | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | 5.1.8 | OS: | Linux (Linux) |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[2 Mar 2006 10:06]
Johan Andersson
[13 Mar 2006 9:06]
Jonas Oreland
Hi, This is incorrect asserion. This is also reported in bug#18000 I can't be a 100% sure what actually caused it to "assert". But the assertion was incorrect that's for sure.
[13 Mar 2006 15:14]
Jonas Oreland
pushed into 5.1.8
[14 Mar 2006 9:29]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.8 changelog. Closed.
