ndb - remove incorrect assertion   bug#17854, bug#18000

storage/ndb/src/kernel/blocks/dblqh/DblqhMain.cpp:
  remove incorrect assertion